--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
 links:
   - name:         About
     url:          /about
+  - name:         Quotes
+    url:          /quotes
   - name:         Twitter
     url:          https://twitter.com/larsbarkman
     external:     true
