--- a/_config.yml
+++ b/_config.yml
@@ -27,5 +27,4 @@ highlighter:      pygments
 permalink:        pretty
 markdown:         redcarpet
 redcarpet:
-  extensions:
-    - smart
+  extensions: ["smart", "no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "strikethrough", "superscript", "with_toc_data"]
